Fixes colours of titles in about
Mario stated that the titles in the about section were hard to read so I changed their colours a bit. Now they are much easier to read but still keep the same general feel!

--- a/public/darkMode.css
+++ b/public/darkMode.css
@@ -72,3 +72,7 @@ a:hover {
 rect.selection {
   fill: green;
 }
+
+.primary-text {
+	color: lightsteelblue;
+}
